# MGMN

./: .gitignore  MGMN.code-workspace  README.md  README_SETUP.md  app_gmgn_polyo.py  dummy_gmgn.py  environment.yml  prompt.groovy  run_me.ps1  secure_api_key.py  set_me.ps1  state_builder.py  telegram_signal_pipeline.py  test_me.ps1
LSTM-Crypto-Price-Prediction/: lstm.py  test_lstm_module.py
LSTM-Crypto-Price-Prediction/technical_analysis/: coppock.py  macd.py  rsi.py
TradeMaster/: README.md
TradeMaster/trademaster.egg-info/: PKG-INFO  SOURCES.txt
apps/: app_gmgn.py  app_polyo.py
config/: lstm.yaml
docs/architecture/: lstm_integration.md
docs/rl/: rl_input_schema.md
heston_rl_trader/: README.md  __init__.py  requirements.txt  train_ppo.py
heston_rl_trader/data/: __init__.py  simulated_data.py
heston_rl_trader/env/: __init__.py  trading_env.py
heston_rl_trader/features/: feature_engine.py  state_builder.py
heston_rl_trader/models/: __init__.py  heston_inverse_model.py
heston_rl_trader/rl/: __init__.py  ppo_agent.py
hmmlearn/src/hmmlearn/: _hmmc.cp310-win_amd64.pyd
hmmlearn/src/hmmlearn.egg-info/: PKG-INFO  SOURCES.txt
jumpdiff/jumpdiff.egg-info/: PKG-INFO  SOURCES.txt
limit-order-book/: .dockerignore  CMakeLists.txt  Dockerfile  README.md  app.py  bench.csv  hist.csv  make_day20_charts.py  parquet_export.csv  pyproject.toml  taq_quotes.csv  taq_quotes.parquet  taq_trades.parquet
limit-order-book/.hypothesis/constants/: 1204aad506097f86  68bf490c24467c9a
limit-order-book/analytics/: microstructure_summary.json  summary.json
limit-order-book/analytics/debug/: drift_df.parquet  drift_grid.parquet  imbalance.parquet
limit-order-book/bench_out/: README.md  environment.csv  latency_histogram.csv  summary.csv
limit-order-book/bench_out_ns/: environment.csv  latency_histogram.csv  summary.csv
limit-order-book/cpp/: CMakeLists.txt
limit-order-book/cpp/include/lob/: book_core.hpp  logging.hpp  mempool.hpp  price_levels.hpp  replay.hpp  taq_writer.hpp  types.hpp  util.hpp
limit-order-book/cpp/src/: bench.cpp  book_core.cpp  logging.cpp  price_levels.cpp  replay.cpp  taq_writer.cpp  util.cpp
limit-order-book/cpp/tests/: test_fifo_same_price.cpp  test_headers_compile.cpp  test_market_sweep.cpp  test_modify_price.cpp  test_partial_empty_onesided.cpp  test_price_levels.cpp  test_replay_golden.cpp  test_smoke.cpp  test_stp.cpp  test_types.cpp
limit-order-book/cpp/tools/: CMakeLists.txt  bench.cpp  gen_readme.py  plot_bench.py  replay.cpp
limit-order-book/docs/: bench.csv  bench.md  hist.csv  make_depth_chart.py  validator_report.csv  validator_report.json
limit-order-book/docs/strategy/: iceberg.yaml  iceberg_fillcheck.yaml  pov.yaml  pov_fillcheck.yaml  twap.yaml  twap_fillcheck.yaml  vwap.yaml  vwap_fillcheck.yaml
limit-order-book/docs/sweep/: acceptance.yaml  example_exec_grid.yaml
limit-order-book/python/: csv_to_parquet.py
limit-order-book/python/olob/: __init__.py  _bindings.cpp  analyze.py  backtest.py  checksum.py  cli.py  crashcheck.py  crashsnapshot.py  export_top10_from_states.py  l2_topn_patch.py  make_readme_figs.py  metrics.py  microstructure.py  queue_model.py  risk.py  strategies.py  sweep.py
limit-order-book/python/olob/crypto/: __init__.py  binance.py  common.py
limit-order-book/python/olob/strategy/: iceberg.py  pov.py
limit-order-book/python/olob/viz/: make_gif.py
limit-order-book/python/orderbook_tools/: __init__.py  booklib.py  l2_topn_patch.py  reconstruct.py  validate.py
limit-order-book/recon/2025-08-25/binanceus/BTCUSDT/: reconstructed_states.parquet  top10_depth.parquet
limit-order-book/scripts/: compare_execution.py  run_day17_full_hour.py
limit-order-book/tests_py/: test_basic_golden.py  test_properties.py
models/lstm/: README.md  meta.json  scaler.pkl
pykalman/pykalman.egg-info/: PKG-INFO  requires.txt
src/polyo/: __init__.py  config.py
src/polyo/lstm_forecaster/: __init__.py  model.py  predict.py  train.py  utils.py
src/polyo/rl/: __init__.py  observation.py  pipeline.py
tests/: test_input_stress.py  test_lstm_integration.py  test_polyo_pipeline.py  test_rl_input_expansion.py  test_setup_filename.ps1  test_streamlit_lstm_config.py  test_telegram_signal_pipeline_unit.py  use_case_simple.py  use_case_stress_tests.py
