[build-system]
requires = [
  "scikit-build-core>=0.9",
  "pybind11>=2.12",
  "cmake>=3.21",
  "ninja; platform_system!='Windows'"
]
build-backend = "scikit_build_core.build"

[project]
name = "orderbook-lob"
version = "0.1.0"
description = "Limit Order Book core with Python bindings and CLI"
readme = "README.md"
requires-python = ">=3.9"
# Added Day 8 deps: aiohttp (WS/REST), pandas+pyarrow (Parquet)
dependencies = [
  "typer>=0.12.0",
  "click>=8.1.3",
  "aiohttp>=3.9",
  "pandas>=2.2.0",
  "pyarrow>=16.1.0",
  "matplotlib>=3.8.0",      # <- needed for plots in metrics/report
  "scikit-learn>=1.4; python_version >= '3.9'",  
  "certifi>=2024.0.0",
]


[project.optional-dependencies]
tests = ["pytest>=8.0", "hypothesis>=6.98"]
analytics = ["matplotlib>=3.8.0", "scikit-learn>=1.4"]

[project.scripts]
lob = "olob.cli:cli"   # keep a single entry point; add `analyze` as a subcommand

[tool.scikit-build]
wheel.packages = ["python/olob"]
cmake.verbose = true
wheel.expand-macos-universal-tags = true